Fix overlapping cards bug

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ input:checked + .slider:before {
 #cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
+  grid-auto-rows: 300px;
   justify-content: center;
 }
 
